fix testProcess filePath logic File->IContainer, IResource